# pyfloyd

./: .gitignore  .pylintrc  README.md  expr.g  expr2.g  expr2.inp  json5.py  json5_cst.g  json5_cst.py  json5edit.py  lassoc.g  left.g  main.mjs  parser.mjs  pyproject.toml  rassoc.g  run  t.g  t.js  t.py
.github/workflows/: ci.yml
data/: t.cst.fmt
docs/: Changelog.md  datafiles.md  functions.md  functions.md.dft  goals.md  grammar.md  rejected_ideas.md  todos.md
examples/json5/: README.md  json.dft  json5.g  json5.py  json5_cst.py  json5edit.py  t.cst  t.cst.fmt  t.json5
floyd/: __init__.py  analyzer.py  api.py  compiler.py  dedent.py  formatter.py  generator.py  host.py  inlining_python_templates.py  interpreter.py  javascript_generator.py  parser.py  printer.py  python_compiler.py  python_generator.py  python_templates.py  string_literal.py  tool.py  version.py
grammars/: at_exp.g  at_expr.g  datafile.g  datafile.py  expr.g  floyd.g  floyd2.g  floyd3.g  floyd_ws.g  json.g  json5.g  json5_2.g  json5_cst.g  json5_ws.g  lisp.g
src/pyfloyd/: __init__.py  __main__.py  analyzer.py  api.py  ast.py  at_exp.py  at_exp_parser.py  at_expr.py  attr_dict.py  base.dft  custom_dicts.py  datafile_generator.py  formatter.py  functions.df  functions.py  functions.py.dft  generator.py  generator_options.py  go.dft  grammar.py  grammar_parser.py  hard_coded_generator.py  interpreter.py  javascript.dft  javascript_generator.py  lisp.py  lisp_interpreter.py  lisp_parser.py  parser.py  printer.py  python.dft  python_generator.py  short.dft  string_literal.py  support.py  template.py  tool.py  type_desc.py  version.py
src/pyfloyd.egg-info/: PKG-INFO
src/pyfloyd/datafile/: __init__.py  __main__.py  api.py  parser.py  tool.py
subpackages/: typ-dev
templates/: json.dft
tests/: api_test.py  at_exp_test.py  basic_test.py  formatter_test.py  go_test.py  grammar_test.py  host_fake.py  host_test.py  interpreter_test.py  javascript_dft_test.py  javascript_test.py  lisp_test.py  printer_test.py  python_dft_test.py  python_test.py  support_test.py  tool_test.py  type_desc_test.py
tests/datafile/: api_test.py  decode_test.py  encode_test.py  grammar_test.py  tool_test.py
tests/grammars/: json5_sample.outp
utils/: at-exp
