[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfloyd"
description = "A parser generator and interpreter framework for Python."
authors = [
    {name = "Dirk Pranke", email = "dpranke@chromium.org"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">= 3.9.0"
classifiers= [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dynamic = [ "version" ]

[dependency-groups]
dev = [
    'build==1.2.2.post1',
    'coverage==7.8.0',
    'mypy==1.15.0',
    'pip==25.1.1',
    'pylint==3.3.7',
    'ruff==0.11.7',
    'twine==6.1.0',
    'typ',
    'uv==0.7.3',
]

[project.urls]
Repository = "https://github.com/dpranke/pyfloyd"
Issues = "https://github.com/dpranke/pyfloyd/issues"
Changelog = "https://github.com/dpranke/pyfloyd/blob/master/README.md"

[project.scripts]
fdf = "pyfloyd.datafile:main"
pyfloyd = "pyfloyd.tool:main"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.ruff]
include = [ "run", "src/pyfloyd/*.py", "tests/*.py" ]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.dynamic]
version = {attr = "pyfloyd.__version__"}

[tool.uv.sources]
typ = { git = "https://github.com/dpranke/typ-dev", branch = "main" }
