[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[project]
name = "pyfloyd"
description = "A parser generator and interpreter framework for Python."
authors = [
    {name = "Dirk Pranke", email = "dpranke@gmail.com"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">= 3.11.0"
classifiers= [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dynamic = [ "version" ]

[dependency-groups]
dev = [
    "build>=1.3",
    "coverage>=7.12",
    "mypy>=1.19",
    "pip>=25.3",
    "pylint>=4.0.4",
    "ruff>=0.14.7",
    "twine>=6.2",
]

[project.urls]
Repository = "https://github.com/dpranke/pyfloyd"
Issues = "https://github.com/dpranke/pyfloyd/issues"
Changelog = "https://github.com/dpranke/pyfloyd/blob/master/README.md"

[project.scripts]
fld = "pyfloyd.datafile.tool:main"
flc = "pyfloyd.tool:main"
flt = "pyfloyd.template:main"

[tool.pylint.basic]
# By default, pylint wants method names to be at most 31 chars long,
# but we want to allow up to 40 for regular names and 50 for test names.
method-rgx = "((disabled_)?(test_[a-zA-Z0-9_]{3,45})|([a-z_][a-zA-Z0-9_]{1,39}))$"

# By default, pylint only allows UPPER_CASE constants, but we want to
# allow snake_case as well in some situations.
const-rgx = "[a-zA-Z_][a-zA-Z0-9_]{0,20}$"

# By default, pylint wants all parameter names to be at least two chars long,
# but we want to allow single-char parameter names as well.
argument-rgx = "[a-z_][a-z0-9_]{0,19}$"

# By default, pylint wants all variable names to be at least two chars long,
# but we want to allow single-char variable names as well.
variable-rgx = "[a-z_][a-z0-9_]{0,19}$"

max-args = 8
max-positional-arguments = 8

# Recommend at most 65 statements per function/method
max-statements = 65

[tool.pylint.'messages control']

disable = [
   # Too much is duplicated between generated parsers and other AST walkers.
   "duplicate-code",

   # Don't want warnings for these.
   "fixme",
   "missing-docstring",

   # These are violated too often in practice.
   "too-few-public-methods",
   "too-many-branches",
   "too-many-instance-attributes",
   "too-many-locals",
   "too-many-public-methods",
   "too-many-return-statements",

   # This will potentially complain on correct code like
   #  `foo, bar = baz` if baz is a list, and there's no way to
   # tell it that this is correct other than disabling the warning :(.
   "unbalanced-tuple-unpacking",
]

[tool.pylint.reports]
reports = false

[tool.pylint.score]
score = false

[tool.ruff]
include = ["pyproject.toml", "run", "src/**/*.py", "tests/**/*.py"]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "pyfloyd.__version__"}

[tool.uv]
required-version = ">=0.9.0"

[tool.uv.sources]
typ = { git = "https://github.com/dpranke/typ-dev", branch = "main" }
